K8s/service.yaml
# k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-playground-svc
  namespace: dev
spec:
  selector:
    app: wil-playground
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
---
kind: Service
metadata:
  name: argocd-server-external
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
